--- a/previous_work.html
+++ b/previous_work.html
@@ -42,10 +42,10 @@
                 </a>
                 <div class="container-carousel col-4">
                     <div class="carousel-header">
-                        <p>So this is some of my <u class="under">past work</u>. Looking for any subject in particular? Choose bellow.</p>
+                        <p>Hi there. My name is Ricardo and this is my portfolio. Check what I've been up to.</p>
                     </div>
                     <div class="carousel-header-still">
-                        <p>So this is some of my <u class="under">past work</u>. Looking for any subject in particular? Choose bellow.</p>
+                        <p>Hi there. My name is Ricardo and this is my portfolio. Check what I've been up to.</p>
                     </div>
                 </div>
                 <div class="menu col-4">
@@ -84,8 +84,11 @@
                 </a>
                 <div class="container-carousel col-4 px-0 expand">
                     <div class="carousel-header expand">
-                        <p>So this is some of my <u class="under">past work</u>. Looking for any subject in particular? Choose bellow.</p>
+                        <p>Hi there. My name is Ricardo and this is my portfolio. Check what I've been up to.</p>
                     </div>
+                    <!-- <div class="carousel-header-still expand px-2">
+                        <p>Hi there. My name is Ricardo and this is my portfolio. Check what I've been up to.</p>
+                    </div> -->
                 </div>
                 <button class="menu col-4 btn-no-style expand">
                     <div class="container-fluid px-0 funny-container expand">
@@ -121,7 +124,7 @@
                     <div class="span-3 expand">
                         <div class="circulo expand"><div class="cores"></div></div>B<span class="expand">arroso</span></div>
                 </a>
-                <button class="menu offset-4  btn-no-style expand">
+                <button class="menu offset-4 btn-no-style col-2 expand">
                     <div class="container-fluid ps-1 pe-0 funny-container expand">
                         <div class="d-flex justify-content-center px-0">
                             <p><u class="under menu-name expand">Menu</u></p>
