--- a/previous_work.html
+++ b/previous_work.html
@@ -124,7 +124,7 @@
                     <div class="span-3 expand">
                         <div class="circulo expand"><div class="cores"></div></div>B<span class="expand">arroso</span></div>
                 </a>
-                <button class="menu offset-4 btn-no-style col-2 expand">
+                <button class="menu offset-4 col-2 btn-no-style expand">
                     <div class="container-fluid ps-1 pe-0 funny-container expand">
                         <div class="d-flex justify-content-center px-0">
                             <p><u class="under menu-name expand">Menu</u></p>
