portfolio fully debugged

--- a/ara.html
+++ b/ara.html
@@ -154,6 +154,17 @@
                             associations, <u class="under">ARA</u> - short for <u class="under">Academia Recreio Artístico</u>.</p>
                     </div>
                 </div>
+                <div class="offset-1 col-4 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 justify-content-end d-flex p-0">
+                            <a class="no-style" href="a_la_portugaise.html"><</a>
+                        </div>
+                        <div class="col-6 d-flex justify-content-center">more projects</div>
+                        <div class="col-3 justify-content-start d-flex p-0">
+                            <a class="no-style" href="medusa.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="line col-1"></div>
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
@@ -173,6 +184,17 @@
                 </div>    
             </div>
             <div class="row show-small">
+                <div class="col-12 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
+                            <a class="no-style ajuste fino" href="a_la_portugaise.html"><</a>
+                        </div>
+                        <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
+                            <a class="no-style" href="medusa.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
                         <p>Concept for a new flexible logo for one of the oldest portuguese recreational 
@@ -212,13 +234,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.behance.net/ricardobarroso6">Behance</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
                 </div>
             </div>
         </div>
