--- a/se_ao_menos.html
+++ b/se_ao_menos.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="container-carousel col-4">
                     <div class="carousel-header">
-                        <p>Cover art for the single <u class="under">Se ao menos</u>, <br>by Inês Apenas, featuring Irma.</p>
+                        <p>Cover art for the single <u class="under">Se ao menos</u>, by Inês Apenas, featuring Irma.</p>
                     </div>
                     <div class="carousel-header-still">
                         <p>Cover art for the single <u class="under">Se ao menos</u>, <br>by Inês Apenas, featuring Irma.</p>
@@ -155,12 +155,34 @@
                         <p>Released on all platforms on the 5th of May 2024.</p>
                     </div>
                 </div>
+                <div class="offset-1 col-4 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 justify-content-end d-flex p-0">
+                            <!-- <a class="no-style" href="ara.html"><</a> -->
+                        </div>
+                        <div class="col-6 d-flex justify-content-center">more projects</div>
+                        <div class="col-3 justify-content-start d-flex p-0">
+                            <a class="no-style" href="roterdao.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="line col-1"></div>
                 <div class="col-6 subject d-flex justify-content-center align-items-center p-5">
                     <img src="images/capa_ines.png" class="img-fluid">
                 </div>
             </div>
             <div class="row show-small">
+                <div class="col-12 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
+                            <!-- <a class="no-style ajuste fino" href="ara.html"><</a> -->
+                        </div>
+                        <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
+                            <a class="no-style" href="roterdao.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
                         <p>Cover art for the single <u class="under">Se ao menos</u>, 
@@ -188,13 +210,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.behance.net/ricardobarroso6">Behance</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
                 </div>
             </div>
         </div>
