--- a/a_la_portugaise.html
+++ b/a_la_portugaise.html
@@ -156,6 +156,17 @@
                             7th of June 2024.</p>
                     </div>
                 </div>
+                <div class="offset-1 col-4 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 justify-content-end d-flex p-0">
+                            <a class="no-style" href="cereais.html"><</a>
+                        </div>
+                        <div class="col-6 d-flex justify-content-center">more projects</div>
+                        <div class="col-3 justify-content-start d-flex p-0">
+                            <a class="no-style" href="ara.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="line col-1"></div>
                 <div class="offset-1 col-4 subject">
                     <div class="d-flex flex-column too-much-text">
@@ -173,10 +184,22 @@
                 </div>
             </div>
             <div class="row d-flex show-small">
+                <div class="col-12 container-fluid other-project">
+                    <div class="row">
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
+                            <a class="no-style ajuste fino" href="cereais.html"><</a>
+                        </div>
+                        <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
+                        <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
+                            <a class="no-style" href="ara.html">></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <p>Copy for the press release of Rossana's latest single, <u class="under">À la Portugaise</u>, the first
                         from her upcoming sophomore album.</p>
                     <p>Released on the 7th of June 2024.</p>
+                    
                 </div>
                 <div class="col-12 hor-line"></div>
                 <div class="offset-1 col-10 offset-md-2 col-md-8 subject">
@@ -209,13 +232,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.behance.net/ricardobarroso6">Behance</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
                 </div>
             </div>
         </div>
