--- a/about_me.html
+++ b/about_me.html
@@ -153,7 +153,7 @@
             <div class="row show-large">
                 <div class="offset-1 col-4 info">
                     <div class="d-flex flex-column copy">
-                        <p>Hi there again. My name is <u class="under">Ricardo</u> and I'm from Lisbon, Portugal. More than being
+                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm from Lisbon, Portugal. More than being
                              a musician, designer, or even copywriter, I am <u class="under">passionate about communication</u> 
                              in any shape and form.</p>
                         <p>Having studied subjects ranging from Communication Sciences to Electronic Music or 
@@ -175,7 +175,7 @@
             <div class="row show-small">
                 <div class="offset-1 col-10 offset-md-2 col-md-8 d-flex flex-column priority info copy">
                     <div class="d-flex flex-column">
-                        <p>Hi there again. My name is <u class="under">Ricardo</u> and I'm from Lisbon, Portugal. More than being
+                        <p>Hi there again. My name is <u class="under">Ricardo Barroso</u> and I'm from Lisbon, Portugal. More than being
                              a musician, designer, or even copywriter, I am <u class="under">passionate about communication</u> 
                              in any shape and form.</p>
                         <p>Having studied subjects ranging from Communication Sciences to Electronic Music or 
@@ -209,13 +209,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.behance.net/ricardobarroso6">Behance</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
                 </div>
             </div>
         </div>
