--- a/contact_me.html
+++ b/contact_me.html
@@ -157,8 +157,8 @@
                 <div class="offset-1 col-4 subject d-flex align-items-center thats-me-container">
                     <div class="d-flex flex-column">
                         <p><u class="under">E-mail</u>:<br> ricardoriguba@gmail.com</p>
-                        <p><u class="under">Phone</u>:<br> +351 969070134</p>
-                        <p><u class="under">Instagram</u>:<br> bonanca.rgb</p>
+                        <p><u class="under">Phone</u>:<br> +351 969 070 134</p>
+                        <p><u class="under">Instagram</u>:<br> @bonanca.rgb</p>
                     </div>                
                 </div>
             </div>
@@ -187,13 +187,13 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.instagram.com/bonanca.rgb/">Instagram</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center borders">
-                    <a class="no-style ajuste" href="https://bonanca.bandcamp.com/">Bandcamp</a>
+                    <a class="no-style ajuste" target="_blank" href="https://bonanca.bandcamp.com/">Bandcamp</a>
                 </div>
                 <div class="col-4 d-flex justify-content-center">
-                    <a class="no-style ajuste" href="https://www.behance.net/ricardobarroso6">Behance</a>
+                    <a class="no-style ajuste" target="_blank" href="https://www.behance.net/ricardobarroso3">Behance</a>
                 </div>
             </div>
         </div>
