fotos mais leves

--- a/ara.html
+++ b/ara.html
@@ -176,7 +176,7 @@
                                 <img src="images/ara_variations.png" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ara_mockups.png" class="img-fluid">
+                                <img src="images/ara_mockups.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -212,7 +212,7 @@
                                 <img src="images/ara_variations.png" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/ara_mockups.png" class="img-fluid">
+                                <img src="images/ara_mockups.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
