--- a/cereais.html
+++ b/cereais.html
@@ -170,16 +170,16 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide px-3">
-                                <img src="images/cereais.png" class="img-fluid">
+                                <img src="images/cereais.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_post.png" class="img-fluid">
+                                <img src="images/cereais_post.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_tecnica.png" class="img-fluid">
+                                <img src="images/cereais_tecnica.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_story.png" class="img-fluid">
+                                <img src="images/cereais_story.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -213,16 +213,16 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
                             <div class="slide px-3">
-                                <img src="images/cereais.png" class="img-fluid">
+                                <img src="images/cereais.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_post.png" class="img-fluid">
+                                <img src="images/cereais_post.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_tecnica.png" class="img-fluid">
+                                <img src="images/cereais_tecnica.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cereais_story.png" class="img-fluid">
+                                <img src="images/cereais_story.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
