--- a/medusa.html
+++ b/medusa.html
@@ -169,10 +169,10 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide px-3">
-                                <img src="images/medusa_poster.png" class="img-fluid">
+                                <img src="images/medusa_poster.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/medusa.png" class="img-fluid">
+                                <img src="images/medusa.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
                                 <img src="images/medusa_carrosel_1.gif" class="img-fluid">
@@ -210,10 +210,10 @@
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
                             <div class="slide px-3">
-                                <img src="images/medusa_poster.png" class="img-fluid">
+                                <img src="images/medusa_poster.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/medusa.png" class="img-fluid">
+                                <img src="images/medusa.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
                                 <img src="images/medusa_carrosel_1.gif" class="img-fluid">
