--- a/previous_work.html
+++ b/previous_work.html
@@ -175,7 +175,7 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Se ao menos, Inês Apenas</b></p>
                 </div>
-                <div class="col-4 red p-0"><img src="images/capa_ines.png"></div>
+                <div class="col-4 red p-0"><img src="images/capa_ines.jpg"></div>
                 <div class="col-4 text-start">
                     <p>Design</p>
                 </div>
@@ -195,7 +195,7 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Cereais, Bonança</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/cereais.png"></div>
+                <div class="col-4 blue p-0"><img src="images/cereais.jpg"></div>
                 <div class="col-4 text-start">
                     <p>Design, Music, Copywriting</p>
                 </div>
@@ -225,7 +225,7 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Medusa coletivo</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/medusa.png"></div>
+                <div class="col-4 blue p-0"><img src="images/medusa.jpg"></div>
                 <div class="col-4 text-start">
                     <p>Photography, Design, Copywriting</p>
                 </div>
