--- a/roterdao.html
+++ b/roterdao.html
@@ -181,22 +181,22 @@
                                 <img src="images/logo_comparison.svg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/coaster_roterdao.png" class="img-fluid">
+                                <img src="images/coaster_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cover_agenda.png" class="img-fluid">
+                                <img src="images/cover_agenda.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/lighter_roterdao.png" class="img-fluid">
+                                <img src="images/lighter_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/story_roterdao.png" class="img-fluid">
+                                <img src="images/story_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/pin_roterdao.png" class="img-fluid">
+                                <img src="images/pin_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/agenda_roterdao.png" class="img-fluid">
+                                <img src="images/agenda_roterdao.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
@@ -237,22 +237,22 @@
                                 <img src="images/logo_comparison.svg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/coaster_roterdao.png" class="img-fluid">
+                                <img src="images/coaster_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/cover_agenda.png" class="img-fluid">
+                                <img src="images/cover_agenda.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/lighter_roterdao.png" class="img-fluid">
+                                <img src="images/lighter_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/story_roterdao.png" class="img-fluid">
+                                <img src="images/story_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/pin_roterdao.png" class="img-fluid">
+                                <img src="images/pin_roterdao.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/agenda_roterdao.png" class="img-fluid">
+                                <img src="images/agenda_roterdao.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
