--- a/se_ao_menos.html
+++ b/se_ao_menos.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="line col-1"></div>
                 <div class="col-6 subject d-flex justify-content-center align-items-center p-5">
-                    <img src="images/capa_ines.png" class="img-fluid">
+                    <img src="images/capa_ines.jpg" class="img-fluid">
                 </div>
             </div>
             <div class="row show-small">
@@ -192,7 +192,7 @@
                 </div>
                 <div class="hor-line"></div>
                 <div class="col-12 d-flex justify-content-center align-items-start subject p-5 mb-4">
-                    <img src="images/capa_ines.png" class="img-fluid">
+                    <img src="images/capa_ines.jpg" class="img-fluid">
                 </div>
             </div>
         </div>
