novos projetos dezembro 2024

--- a/cereais.html
+++ b/cereais.html
@@ -141,7 +141,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project blue-element cereais">
+    <main class="a-project red-element cereais">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info">
@@ -161,7 +161,7 @@
                         </div>
                         <div class="col-6 d-flex justify-content-center">more projects</div>
                         <div class="col-3 justify-content-start d-flex p-0">
-                            <a class="no-style" href="a_la_portugaise.html">></a>
+                            <a class="no-style" href="medusa.html">></a>
                         </div>
                     </div>
                 </div>
@@ -194,7 +194,7 @@
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
-                            <a class="no-style" href="a_la_portugaise.html">></a>
+                            <a class="no-style" href="medusa.html">></a>
                         </div>
                     </div>
                 </div>
