--- a/medusa.html
+++ b/medusa.html
@@ -156,7 +156,7 @@
                 <div class="offset-1 col-4 container-fluid other-project">
                     <div class="row">
                         <div class="col-3 justify-content-end d-flex p-0">
-                            <a class="no-style" href="ara.html"><</a>
+                            <a class="no-style" href="cereais.html"><</a>
                         </div>
                         <div class="col-6 d-flex justify-content-center">more projects</div>
                         <div class="col-3 justify-content-start d-flex p-0">
@@ -192,7 +192,7 @@
                 <div class="col-12 container-fluid other-project">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
-                            <a class="no-style ajuste fino" href="ara.html"><</a>
+                            <a class="no-style ajuste fino" href="cereais.html"><</a>
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
