--- a/playtime.html
+++ b/playtime.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element playtime">
+    <main class="a-project red-element playtime">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="offset-1 col-4 info">
