--- a/previous_work.html
+++ b/previous_work.html
@@ -171,7 +171,37 @@
         </section>
         <section class="container-fluid py-4 px-0 projects show-large">
 
-            <a href="se_ao_menos.html" class="row design py-4 d-flex align-items-center se-ao-menos">
+            <a href="eter_ines_apenas.html" class="row design py-4 d-flex align-items-center eter">
+                <div class="col-4 d-flex justify-content-end">
+                    <p><b>Éter, Inês Apenas</b></p>
+                </div>
+                <div class="col-4 green p-0"><img src="images/vinil_mockup_ines_apenas.jpg"></div>
+                <div class="col-4 text-start">
+                    <p>Design</p>
+                </div>
+            </a>
+
+            <a href="aniversario_punch.html" class="row design py-4 d-flex align-items-center aniversario_punch">
+                <div class="col-4 d-flex justify-content-end">
+                    <p><b>13º Aniversário Punch</b></p>
+                </div>
+                <div class="col-4 red p-0"><img src="images/lata_punch_transparente.png"></div>
+                <div class="col-4 text-start">
+                    <p>Design</p>
+                </div>
+            </a>
+
+            <a href="aniversario_atomico.html" class="row design py-4 d-flex align-items-center aniversario_atomico">
+                <div class="col-4 d-flex justify-content-end">
+                    <p><b>Aniversário Atómico</b></p>
+                </div>
+                <div class="col-4 blue p-0"><img src="images/cartaz_a3_aniversario_atomico_FINAL.png"></div>
+                <div class="col-4 text-start">
+                    <p>Design</p>
+                </div>
+            </a>
+            
+            <!-- <a href="se_ao_menos.html" class="row design py-4 d-flex align-items-center se-ao-menos">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Se ao menos, Inês Apenas</b></p>
                 </div>
@@ -179,7 +209,7 @@
                 <div class="col-4 text-start">
                     <p>Design</p>
                 </div>
-            </a>
+            </a> -->
 
             <a href="roterdao.html" class="row web-design design py-4 roterdao">
                 <div class="col-4 d-flex justify-content-end">
@@ -195,13 +225,13 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Cereais, Bonança</b></p>
                 </div>
-                <div class="col-4 blue p-0"><img src="images/cereais.jpg"></div>
+                <div class="col-4 red p-0"><img src="images/cereais.jpg"></div>
                 <div class="col-4 text-start">
                     <p>Design, Music, Copywriting</p>
                 </div>
             </a>
 
-            <a href="a_la_portugaise.html" class="row copywriting py-4 a-la-portugaise">
+            <!-- <a href="a_la_portugaise.html" class="row copywriting py-4 a-la-portugaise">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>À la portugaise, Rossana</b></p>
                 </div>
@@ -209,9 +239,9 @@
                 <div class="col-4 text-start">
                     <p>Copywriting</p>
                 </div>
-            </a>
+            </a> -->
 
-            <a href="ara.html" class="row design py-4 ara">
+            <!-- <a href="ara.html" class="row design py-4 ara">
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>ARA [concept]</b></p>
                 </div>
@@ -219,7 +249,7 @@
                 <div class="col-4 text-start">
                     <p>Design</p>
                 </div>
-            </a>
+            </a> -->
 
             <a href="medusa.html" class="row photography design copywriting py-4 medusa">
                 <div class="col-4 d-flex justify-content-end">
@@ -235,7 +265,7 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Hannah, Anna, Ana</b></p>
                 </div>
-                <div class="col-4 red p-0"></div>
+                <div class="col-4 green p-0"></div>
                 <div class="col-4 text-start">
                     <p>Music</p>
                 </div>
@@ -245,7 +275,7 @@
                 <div class="col-4 d-flex justify-content-end">
                     <p><b>Playtime, Bonança</b></p>
                 </div>
-                <div class="col-4 green p-0"><img src="images/playtime.png"></div>
+                <div class="col-4 red p-0"><img src="images/playtime.png"></div>
                 <div class="col-4 text-start">
                     <p>Music, Video, Copywriting, Experiment</p>
                 </div>
@@ -260,7 +290,37 @@
             <div class="row">
                 <div class="hor-line"></div>
 
-                <a href="se_ao_menos.html" class="flex-column design py-4 d-flex align-items-center se-ao-menos">
+                <a href="eter_ines_apenas.html" class="flex-column design py-4 d-flex align-items-center eter">
+                    <div class=" d-flex">
+                        <p><b>Éter, Inês Apenas</b></p>
+                    </div>
+                    <div class=" text-start">
+                        <p>Design</p>
+                    </div>
+                </a>
+                <div class="hor-line design"></div>
+
+                <a href="aniversario_punch.html" class="flex-column design py-4 d-flex align-items-center aniversario_punch">
+                    <div class=" d-flex">
+                        <p><b>13º Aniversário Punch</b></p>
+                    </div>
+                    <div class=" text-start">
+                        <p>Design</p>
+                    </div>
+                </a>
+                <div class="hor-line design"></div>
+
+                <a href="aniversario_atomico.html" class="flex-column design py-4 d-flex align-items-center aniversario_atomico">
+                    <div class=" d-flex">
+                        <p><b>Aniversário Atómico</b></p>
+                    </div>
+                    <div class=" text-start">
+                        <p>Design</p>
+                    </div>
+                </a>
+                <div class="hor-line design"></div>
+
+                <!-- <a href="se_ao_menos.html" class="flex-column design py-4 d-flex align-items-center se-ao-menos">
                     <div class=" d-flex">
                         <p><b>Se ao menos, Inês Apenas</b></p>
                     </div>
@@ -268,7 +328,7 @@
                         <p>Design</p>
                     </div>
                 </a>
-                <div class="hor-line design"></div>
+                <div class="hor-line design"></div> -->
 
 
                 <a href="roterdao.html" class="d-flex align-items-center flex-column web-design design py-4 roterdao">
@@ -293,7 +353,7 @@
                 <div class="hor-line design music copywriting"></div>
 
 
-                <a href="a_la_portugaise.html" class="d-flex align-items-center flex-column copywriting py-4 a-la-portugaise">
+                <!-- <a href="a_la_portugaise.html" class="d-flex align-items-center flex-column copywriting py-4 a-la-portugaise">
                     <div class=" d-flex">
                         <p><b>À la portugaise, Rossana</b></p>
                     </div>
@@ -301,10 +361,10 @@
                         <p>Copywriting</p>
                     </div>
                 </a>
-                <div class="hor-line copywriting"></div>
+                <div class="hor-line copywriting"></div> -->
 
 
-                <a href="ara.html" class="d-flex align-items-center flex-column design py-4 ara">
+                <!-- <a href="ara.html" class="d-flex align-items-center flex-column design py-4 ara">
                     <div class=" d-flex">
                         <p><b>ARA [concept]</b></p>
                     </div>
@@ -312,7 +372,7 @@
                         <p>Design</p>
                     </div>
                 </a>
-                <div class="hor-line design"></div>
+                <div class="hor-line design"></div> -->
 
 
                 <a href="medusa.html" class="d-flex align-items-center flex-column photography design copywriting py-4 medusa">
