--- a/aniversario_punch.html
+++ b/aniversario_punch.html
@@ -176,16 +176,19 @@
                                 </iframe>
                             </div>
                             <div class="slide px-3">
-                                <img src="images/poster_mockup_ines_apenas.jpg" class="img-fluid">
+                                <img src="images/cartaz_completo_13o_aniv.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/discos_vinil_ines_apenas.jpg" class="img-fluid">
+                                <img src="images/punch_aniv_dia_19_story.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/exterior_lp_ines_apenas.jpg" class="img-fluid">
+                                <img src="images/punch_aniv_dia_20_post.jpg" class="img-fluid">
                             </div>
                             <div class="slide px-3">
-                                <img src="images/interior_lp_ines_apenas.jpg" class="img-fluid">
+                                <img src="images/lata_punch_transparente.png" class="img-fluid">
+                            </div>
+                            <div class="slide px-3">
+                                <img src="images/lata_raw.jpg" class="img-fluid">
                             </div>
                         </div>
                     </div>
