--- a/roterdao.html
+++ b/roterdao.html
@@ -153,9 +153,8 @@
                         <p>Creation of new identity and graphic system, including a custom
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
-                        <p>The new image is already available online and in situ. I am currently managing the website and creating social media content.</p>
                         <div>
-                            <a class="button-skin" href="https://roterdao.pt"><u class="under">Check website</u></a>
+                            <a class="button-skin" href="https://bonancargb.github.io/RoterdaoClubFinal/"><u class="under">Check website</u></a>
                         </div>
                     </div>
                 </div>
@@ -220,9 +219,8 @@
                         <p>Creation of new identity and graphic system, including a custom
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
-                        <p>The new image is already available online and in situ. I am currently managing the website and creating social media content.</p>
                         <div>
-                            <a class="button-skin" href="https://roterdao.pt"><u class="under">Check website</u></a>
+                            <a class="button-skin" href="https://bonancargb.github.io/RoterdaoClubFinal/"><u class="under">Check website</u></a>
                         </div>
                     </div>
                 </div>
