link roterdao site

--- a/roterdao.html
+++ b/roterdao.html
@@ -154,7 +154,7 @@
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
                         <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/RoterdaoClubFinal/"><u class="under">Check website</u></a>
+                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
                         </div>
                     </div>
                 </div>
@@ -220,7 +220,7 @@
                              typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
                             Development as well of a website from scratch.</p>
                         <div>
-                            <a class="button-skin" href="https://bonancargb.github.io/RoterdaoClubFinal/"><u class="under">Check website</u></a>
+                            <a class="button-skin" href="https://bonancargb.github.io/roterdao_arquivo/"><u class="under">Check website</u></a>
                         </div>
                     </div>
                 </div>
